resources/tests/invalid_syntax/type_ptr_begin.ct
//`Expected a '<'!
//1
fn hello()->PTR {
  pass;
}